package com.angajat;

/**
 * Interfata claselor de angajati
 * */
public interface IAngajat {
    /**
     * Metoda de obtinere a numelui angajatului
     * @return Numele angajatului
     * */
    String getNume();

    /**
     * Metoda de obtinere a salariului angajatului
     * @return Salariul angajatului
     * */
    double getSalariu();
}
